# OTAProject

./: README.md
ibox_ota/: CMakeLists.txt  build.sh  rsa_public_2048.pem
ibox_ota/include/: CUtil.h  file.h  json.hpp  ota_manager.h  ota_manager_cloud_communication.h  ota_manager_common.h  ota_manager_event_manager.h  ota_manager_package_manager.h  ota_manager_process_storage.h  ota_manager_state.h  ota_manager_state_check_result.h  ota_manager_state_context.h  ota_manager_state_download.h  ota_manager_state_idle.h  ota_manager_state_parse_verify.h  ota_manager_state_pre_download.h  ota_manager_state_update.h  ota_manager_state_upload_result.h  socket_udp.h
ibox_ota/src/: main.cpp  ota_manager.cpp  ota_manager_cloud_communication.cpp  ota_manager_cloud_communication.h  ota_manager_event_manager.cpp  ota_manager_package_manager.cpp  ota_manager_process_storage.cpp  ota_manager_state.cpp  ota_manager_state_check_result.cpp  ota_manager_state_context.cpp  ota_manager_state_download.cpp  ota_manager_state_idle.cpp  ota_manager_state_parse_verify.cpp  ota_manager_state_pre_download.cpp  ota_manager_state_update.cpp  ota_manager_state_upload_result.cpp  socket_udp.cpp
